--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>iMusical</title>
+    <title>iMusical || Buy Mucsical Instruments Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
